--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>QuietTrack</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <h1>QuietTrack</h1>
-  <div id="visualizer">
-    <div class="bar" id="bar"></div>
+  
+  <div class="monster-container">
+    <img src="monster.png" alt="Noise Monster" class="monster-img" />
+    <div id="monster-bar"></div>
   </div>
+
   <label>
     Sensitivity:
-    <input type="range" min="1" max="10" value="5" id="sensitivity">
+    <input type="range" min="1" max="10" value="5" id="sensitivity" />
   </label>
+
   <script src="script.js"></script>
 </body>
 </html>
