--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <h1>QuietTrack</h1>
-  
+
   <div class="monster-container">
     <img src="monster.png" alt="Noise Monster" class="monster-img" />
-    <div id="monster-bar"></div>
+    <div id="monster-bar-container">
+      <div id="monster-bar"></div>
+    </div>
   </div>
 
   <label>
