--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>QuietTrack</title>
+  <title>Peaceful Panda</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h1>QuietTrack</h1>
+  <h1>Peaceful Panda</h1>
 
   <div class="monster-container">
     <img src="panda.png" alt="Noise Monster" class="monster-img" />
