--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Peaceful Panda</h1>
 
   <div class="monster-container">
-    <img src="panda.png" alt="Noise Monster" class="monster-img" />
+    <img src="panda.png" alt="Peaceful Panda" class="monster-img" />
     <div id="monster-bar-container">
       <div id="monster-bar"></div>
     </div>
